--- a/hw00/index.html
+++ b/hw00/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="col-md-6 twenty">
       詠唱詞: 
-Generate a Japanese anime style scene. The scene was in the professor's office. A professor was introducing the class. The professor's appearance is chest-length straight black hair, flat bangs, and blue eyes. A male professor wearing a white lab uniform.   
+ChatGPT，上傳自己的照片並說"幫我根據這張圖片生成一張日本動漫風格頭像"   
     </div>
   </div>
 
