--- a/hw01/index.html
+++ b/hw01/index.html
@@ -160,7 +160,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      本次作業讓我理解到做字體其實不是一件容易的事，尤其是每個人各自的手寫字體，要花費大量的時候手寫，才可以有足夠的資料。所以手會寫到非常痠，也第一次自己製作手寫字體包，非常的有趣，也非常的累。
+      這次作業讓我深刻體會到使用電繪板書寫的困難，剛開始的時候，我試圖用電繪板來完成整個作業，但很快就發現這樣的方式相當耗費精力。不僅需要適應數位筆的觸感，還得時刻注意筆畫的穩定性，這讓我的手感變得生硬，速度也變慢了許多。
+後來，我決定改手寫，雖然在流暢度上有了明顯的提升，但長時間的書寫依舊讓人感到疲憊。這次的體驗讓我更深刻地理解到，在訓練人工智慧時，所需的資料量有多麼龐大。
     </div>
   </div>
 
