--- a/hw01/index.html
+++ b/hw01/index.html
@@ -169,7 +169,7 @@
   <div class="row hw12">
       <div class="col-md-12 twenty">
         稿紙位置連結：(手寫的稿紙上傳壓縮檔、電子書寫的上傳pdf檔)
-        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.zip'" value="按我 ٩(｡・ω・｡)و 前往">
+        <input type="button" name="back" onclick="location.href='https://drive.google.com/drive/folders/1odV1KnTPg-9jlBNNCdkkgqkekdGkQ22G?usp=sharing'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
@@ -177,7 +177,7 @@
   <div class="row hw12">
       <div class="col-md-12 twenty">
         字體檔位置連結：授權至SIL開源字型
-        <input type="button" name="back" onclick="location.href='https://github.com/Garvin2009/ai2025s/blob/main/hw01/113598097.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
+        <input type="button" name="back" onclick="location.href='https://github.com/andyhi93/ai2025s/blob/main/hw01/Font_112590052.ttf'" value="按我 ٩(｡・ω・｡)و 前往">
         (p.s 請記得修改網址)
       </div>
   </div>
@@ -222,11 +222,11 @@
     <div class="col-md-12 twenty">    
        <figure>
           <figcaption>稿紙第30頁</figcaption>
-          <img src="30.png" width="700px"/>
+          <img src="30.jpg" width="700px"/>
        </figure>
        <figure>
           <figcaption>稿紙第57頁</figcaption>
-          <img src="57.png" width="700px"/>
+          <img src="57.jpg" width="700px"/>
         </figure>
     </div>
   </div>
