--- a/hw01/index.html
+++ b/hw01/index.html
@@ -25,8 +25,8 @@
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-     font-family:'t113378043';
-    src: url(https://Garvin2009.github.io/ai2025s/hw01/113378043.woff2);
+     font-family:'112590052';
+    src: url(https://github.com/andyhi93/ai2025s/blob/main/hw01/Font_112590052.woff2);
   }
   table {
       border-collapse: collapse;
