--- a/hw01/index.html
+++ b/hw01/index.html
@@ -22,7 +22,7 @@
 
   @font-face {
      font-family:'CircleFont';
-    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
+    src: url(https://github.com/andyhi93/ai2025s/blob/main/hw01/Font_112590052.woff2); 
   }
   @font-face {
      font-family:'112590052';
