--- a/hw01/index.html
+++ b/hw01/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="zh-Hant-TW">
 <head>
@@ -22,11 +21,11 @@
 
   @font-face {
      font-family:'CircleFont';
-    src: url(https://github.com/andyhi93/ai2025s/blob/main/hw01/Font_112590052.woff2); 
+    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-     font-family:'112590052';
-    src: url(https://github.com/andyhi93/ai2025s/blob/main/hw01/Font_112590052.woff2);
+     font-family:'t112590052';
+    src: url(https://andyhi93.github.io/ai2025s/hw01/Font_112590052.woff2);
   }
   table {
       border-collapse: collapse;
@@ -91,7 +90,7 @@
     font-family: 'CircleFont', 'Noto Sans JP', serif;
   }
   p{
-    font-family:'t113378043', serif;
+    font-family:'t112590052', serif;
   }
   .container-fluid {
     width:  90%;
