--- a/hw02/index.html
+++ b/hw02/index.html
@@ -24,8 +24,8 @@
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-    font-family:'t113378043';
-    src: url(https://Garvin2009.github.io/ai2025s/hw02/113378043big5.woff2);
+    font-family:'112590052';
+    src: url(https://github.com/andyhi93/ai2025s/blob/main/hw02/index_files/BIG5Font_112590052.woff2);
     }
   @font-face {
     font-family:'113378043noto';
