--- a/hw02/index.html
+++ b/hw02/index.html
@@ -24,7 +24,7 @@
     src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
   }
   @font-face {
-    font-family:'112590052';
+    font-family:'t112590052';
     src: url(https://github.com/andyhi93/ai2025s/blob/main/hw02/index_files/BIG5Font_112590052.woff2);
     }
   @font-face {
@@ -62,7 +62,7 @@
       border:1px solid #ddd;
   }
   p1{
-    font-family:'t113378043';
+    font-family:'t112590052';
   }
   p2{
     font-family:'113378043noto';
@@ -235,7 +235,7 @@
     <div class="col-md-12 twenty">    
       <figure>
         <figcaption>權重檔fontdiffuser版本截圖(在雲端硬碟內，與zi2zi版本2選1放入就好)</figcaption>
-            <img src="./index_files/train_font_diffuser.png" width="100%">
+            <img src="./index_files/螢幕擷取畫面%202025-05-09%20154659.png" width="100%">
         </figure>
     </div>
   </div>
