--- a/hw02/index.html
+++ b/hw02/index.html
@@ -25,7 +25,7 @@
   }
   @font-face {
     font-family:'t112590052';
-    src: url(https://andyhi93.github.io/ai2025s/hw02/index_files/BIG5Font_112590052.woff2);
+    src: url(https://andyhi93.github.io/ai2025s/hw02/index_files/BIG5Font_112590052.ttf);
     }
   @font-face {
     font-family:'113378043noto';
