--- a/hw02/index.html
+++ b/hw02/index.html
@@ -25,11 +25,11 @@
   }
   @font-face {
     font-family:'t113378043';
-    src: url(https://andyhi03.github.io/ai2025s/hw02/index_files/BIG5Font_112590052.woff2);
+    src: url('./index_files/BIG5Font_112590052.woff2');
     }
   @font-face {
     font-family:'113378043noto';
-    src: url(https://andyhi03.github.io/ai2025s/hw02/index_files/noto_112590052.woff2);
+    src: url('./index_files/noto_112590052.woff2');
     }
   table {
       border-collapse: collapse;
