--- a/hw05/index.html
+++ b/hw05/index.html
@@ -147,14 +147,20 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 05</h1>
+      <h1>作業 04</h1>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次的作業是將自己的照片轉換成吉卜力風格的圖像，並最終製作成影片的形式呈現。過程中，我體驗到了圖像風格轉換的樂趣，也更深入理解了動畫風格背後的藝術特徵。
+
+在將照片轉換成吉卜力風格的過程中，我觀察到吉卜力作品中常見的溫暖色調、細膩筆觸以及富有情感的表情設計。這不僅讓我對動畫美術有了更多的認識，也激發我對影像風格應用的興趣。
+
+最後，將這些轉換後的圖像整理並剪輯成影片，讓整體作品更有故事感和生命力。從靜態圖像到動態影像的轉換，也讓我學習到如何用視覺語言來呈現情緒與敘事。
+
+這次的作業讓我不只動手操作，更開拓了我對視覺藝術風格的想像力與表達方式。
     </div>
   </div>
 
@@ -170,22 +176,22 @@
         </tr>
         <tr>
           <td rowspan="4" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>4</td>
-          <td>Simple baseline - 描述</td>
+          <td>Simple baseline - 完成ChatGPT生圖</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 描述</td>
+          <td>Medium baseline - 完成圖像變換</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
-          <td>Strong baseline - 描述</td>
+          <td>Strong baseline - 完成短影音製作</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
           <td id='m4'>-10</td>
           <td>沒有寫100字心得</td>
         </tr>
@@ -195,18 +201,41 @@
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12 bottomrow">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <figure>
+        <figcaption>完成ChatGPT生吉卜力圖</figcaption>
+        <p>你所選擇的圖片</p>
+        <img src="me.jpg" width="50%"/>
+        <p>轉換吉卜力風格</p>
+        <img src="1.png" width="50%"/>
+      </figure>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty"> 
+      <figure>
+        <figure>
+          <figcaption>完成衣服變換</figcaption>
+          <img src="2.png" width="50%"/>
+        </figure>
+    </div>
+  </div>
 
   <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <figure>
+        <figcaption>完成短影音製作</figcaption>
+        <p>簡單短影音</p>
+        <video src="3.mp4" width="50%" controls> </video>
+      </figure>
+    </div>
+  </div>
 
+  <!-- ------------------------------------------------>
 
 <script>
   $(function() {
